--- a/Guru99_Selenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/Guru99_Selenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="deb56e">  <td>19/11/17 17:31:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Day1.login()[pri:0, instance:com.guru99.Day1.Day1@3224f60b]">login</td> 
-  <td>main@852687460</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>19/11/17 17:31:57</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Day1.teardown()[pri:0, instance:com.guru99.Day1.Day1@3224f60b]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@852687460</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>19/11/17 17:31:46</td>   <td>-11417</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Day1.tearup()[pri:0, instance:com.guru99.Day1.Day1@3224f60b]">&gt;&gt;tearup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@852687460</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:16:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Day1.login(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">login</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:16:42</td>   <td>20869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Day1.login(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">login</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:17:04</td>   <td>43178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Day1.login(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">login</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:17:26</td>   <td>65337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Day1.login(java.lang.String, java.lang.String)[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">login</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:16:32</td>   <td>11077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Day1.teardown()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:16:53</td>   <td>32259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Day1.teardown()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:17:15</td>   <td>54441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Day1.teardown()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:17:40</td>   <td>79019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Day1.teardown()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:16:10</td>   <td>-11265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Day1.tearup()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&gt;&gt;tearup</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:16:33</td>   <td>11805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Day1.tearup()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&gt;&gt;tearup</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:16:54</td>   <td>32989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Day1.tearup()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&gt;&gt;tearup</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>19/11/20 19:17:16</td>   <td>55187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Day1.tearup()[pri:0, instance:com.guru99.Day1.Day1@5d76b067]">&gt;&gt;tearup</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
 </table>
